<resources>
    <string name="app_name">UdacityPortfolio</string>

    <!--Buttons-->
    <string name="action_settings">Settings</string>
    <string name="title">My NanoDegree Apps</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyx_reader">XYZ Reader</string>
    <string name="capstone">Capstone My Own App</string>

    <!--ToastsÅ-->
    <string name="will_launch">This will launch %s</string>
</resources>
